
[gd_scene load_steps=67 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://player_frog.png" type="Texture" id=2]
[ext_resource path="res://PlayerTongue.tscn" type="PackedScene" id=3]
[ext_resource path="res://sfx/jump.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/hop.wav" type="AudioStream" id=5]
[ext_resource path="res://sfx/collectstarpiece.wav" type="AudioStream" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.5215
height = 9.11848

[sub_resource type="Animation" id=77]
resource_name = "Dead_froggie"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0021699, 0.104155, 0.20614, 0.305955 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28 ]
}

[sub_resource type="Animation" id=3]
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 3, 1, 0, 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.45
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 8, 9, 10, 11, 13, 14, 15, 6 ]
}

[sub_resource type="Animation" id=5]
resource_name = "land_right"
length = 1.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.0024346, 0.2, 0.4, 0.6, 0.8, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 12, 13, 13, 13, 14, 15, 6 ]
}

[sub_resource type="Animation" id=6]
resource_name = "launch_right"
length = 0.35
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 10, 11, 11, 12, 12 ]
}

[sub_resource type="Animation" id=69]
resource_name = "swing"
length = 0.45
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 20, 20, 20, 20 ]
}

[sub_resource type="Animation" id=7]
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.000195313, 0.111554, 0.20166, 0.295475, 0.395475, 0.495475, 0.595475, 0.695475, 0.80775, 0.907326, 0.999551 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 15, 16, 17, 18, 18, 18, 19, 7, 6, 5 ]
}

[sub_resource type="Animation" id=8]
resource_name = "tongue_right _launch"
length = 0.55
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.11, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 18, 18, 18, 18, 18 ]
}

[sub_resource type="Animation" id=78]
resource_name = "tongue_right _retract"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 7, 6, 5 ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Dead_froggie"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Dead_froggie"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Dead_froggie"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Dead_froggie"

[sub_resource type="AnimationNodeBlendSpace2D" id=14]
blend_point_0/node = SubResource( 10 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 11 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 12 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 13 )
blend_point_3/pos = Vector2( 0, 1 )

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "hop_right"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "hop_right"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "hop_right"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "hop_right"

[sub_resource type="AnimationNodeBlendSpace2D" id=19]
blend_point_0/node = SubResource( 15 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 16 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 17 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 18 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "Idle_froggie"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "Idle_froggie"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "Idle_froggie"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "Idle_froggie"

[sub_resource type="AnimationNodeBlendSpace2D" id=24]
blend_point_0/node = SubResource( 20 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 21 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 22 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 23 )
blend_point_3/pos = Vector2( 0, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=61]
animation = "land_right"

[sub_resource type="AnimationNodeAnimation" id=62]
animation = "land_right"

[sub_resource type="AnimationNodeAnimation" id=63]
animation = "land_right"

[sub_resource type="AnimationNodeAnimation" id=64]
animation = "land_right"

[sub_resource type="AnimationNodeBlendSpace2D" id=55]
blend_point_0/node = SubResource( 61 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 62 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 63 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 64 )
blend_point_3/pos = Vector2( 0, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=56]
animation = "launch_right"

[sub_resource type="AnimationNodeAnimation" id=57]
animation = "launch_right"

[sub_resource type="AnimationNodeAnimation" id=58]
animation = "launch_right"

[sub_resource type="AnimationNodeAnimation" id=59]
animation = "launch_right"

[sub_resource type="AnimationNodeBlendSpace2D" id=60]
blend_point_0/node = SubResource( 56 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 57 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 58 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 59 )
blend_point_3/pos = Vector2( 0, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=70]
animation = "swing"

[sub_resource type="AnimationNodeAnimation" id=71]
animation = "swing"

[sub_resource type="AnimationNodeAnimation" id=72]
animation = "swing"

[sub_resource type="AnimationNodeAnimation" id=73]
animation = "swing"

[sub_resource type="AnimationNodeBlendSpace2D" id=74]
blend_point_0/node = SubResource( 70 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 71 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 72 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 73 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "tongue_right _launch"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "tongue_right _launch"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "tongue_right _launch"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "tongue_right _launch"

[sub_resource type="AnimationNodeBlendSpace2D" id=39]
blend_point_0/node = SubResource( 35 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 36 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 37 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 38 )
blend_point_3/pos = Vector2( 0, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "tongue_right _retract"

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "tongue_right _retract"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "tongue_right _retract"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "tongue_right _retract"

[sub_resource type="AnimationNodeBlendSpace2D" id=44]
blend_point_0/node = SubResource( 40 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 41 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 42 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 43 )
blend_point_3/pos = Vector2( 0, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=49]

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=65]

[sub_resource type="AnimationNodeStateMachineTransition" id=66]

[sub_resource type="AnimationNodeStateMachineTransition" id=67]

[sub_resource type="AnimationNodeStateMachineTransition" id=68]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=75]

[sub_resource type="AnimationNodeStateMachineTransition" id=76]

[sub_resource type="AnimationNodeStateMachine" id=53]
states/Dead/node = SubResource( 14 )
states/Dead/position = Vector2( 111.5, 404.976 )
states/Hop/node = SubResource( 19 )
states/Hop/position = Vector2( 355.625, 30 )
states/Idle/node = SubResource( 24 )
states/Idle/position = Vector2( 109, 152 )
states/Land/node = SubResource( 55 )
states/Land/position = Vector2( 380.812, 398.65 )
states/Launch/node = SubResource( 60 )
states/Launch/position = Vector2( 382.562, 326.65 )
states/swing/node = SubResource( 74 )
states/swing/position = Vector2( 565.062, 200.243 )
states/tongue_launch/node = SubResource( 39 )
states/tongue_launch/position = Vector2( 390.75, 176.5 )
states/tongue_retract/node = SubResource( 44 )
states/tongue_retract/position = Vector2( 393, 242.75 )
transitions = [ "Idle", "Hop", SubResource( 45 ), "Hop", "Idle", SubResource( 46 ), "Idle", "tongue_launch", SubResource( 49 ), "tongue_retract", "Idle", SubResource( 51 ), "Idle", "Dead", SubResource( 52 ), "Idle", "Launch", SubResource( 65 ), "Launch", "Land", SubResource( 66 ), "Land", "Idle", SubResource( 67 ), "tongue_launch", "tongue_retract", SubResource( 68 ), "tongue_launch", "swing", SubResource( 75 ), "swing", "tongue_retract", SubResource( 76 ) ]
start_node = "Idle"
graph_offset = Vector2( -135.938, 138.243 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=54]

[sub_resource type="AudioStreamRandomPitch" id=2]
audio_stream = ExtResource( 5 )
random_pitch = 1.4

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.52992, 6.3 )
texture = ExtResource( 2 )
vframes = 6
hframes = 5
frame = 3

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( -2.44023, 16.2278 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="PlayerTongue" parent="." instance=ExtResource( 3 )]

[node name="HopSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 2 )

[node name="JumpSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="CollectStarPieceSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )


[node name="InvulnerableTimer" type="Timer" parent="."]
one_shot = true

[node name="JumpButtonPressLeniencyTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="JumpOnGroundLeniencyTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

position = Vector2( 3.25388, 15.6399 )
shoot_speed = 900.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dead_froggie = SubResource( 77 )
anims/Idle_froggie = SubResource( 3 )
anims/hop_right = SubResource( 4 )
anims/land_right = SubResource( 5 )
anims/launch_right = SubResource( 6 )
anims/swing = SubResource( 69 )
anims/tongue_right = SubResource( 7 )
"anims/tongue_right _launch" = SubResource( 8 )
"anims/tongue_right _retract" = SubResource( 78 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 53 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 54 )
parameters/Dead/blend_position = Vector2( 0, 0 )
parameters/Hop/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Land/blend_position = Vector2( 0, 0 )
parameters/Launch/blend_position = Vector2( 0, 0 )
parameters/swing/blend_position = Vector2( 0, 0 )
parameters/tongue_launch/blend_position = Vector2( 0, 0 )
parameters/tongue_retract/blend_position = Vector2( 0, 0 )

[connection signal="tongue_start" from="." to="PlayerTongue" method="_on_Player_tongue_start"]
[connection signal="tongue_stop" from="." to="PlayerTongue" method="_on_Player_tongue_stop"]
[connection signal="tongue_swing" from="PlayerTongue" to="." method="_on_PlayerTongue_tongue_swing"]
[connection signal="timeout" from="InvulnerableTimer" to="." method="_on_InvulnerableTimer_timeout"]
